SAK-32769 fix alignment of comments icon and word-breaks for student names in firefox

--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -85,6 +85,7 @@
 }
 #gradeTableWrapper tbody td .gb-student-cell {
   white-space: normal;
+  word-break: break-all; /* fallback */
   word-break: break-word;
   vertical-align: middle;
 }
@@ -211,12 +212,11 @@
 }
 #gradeTableWrapper .gb-comment-notification {
   position: absolute;
-  top: 50%;
+  top: 4px;
   right: 8px;
   font-size: 16px;
   min-width: 16px;
   height: 20px;
-  margin-top: -14px;
   color: #AAA;
 }
 #gradeTableWrapper .gb-comment-notification:before,
